improvment recycler adapter for multiple layout

--- a/app/src/main/res/layout/act_login.xml
+++ b/app/src/main/res/layout/act_login.xml
@@ -8,7 +8,7 @@
     <data>
         <import type="android.view.View"/>
         <variable
-            name="vmLogin"
+            name="viewmodel"
             type="com.yunusseker.mvvmarchitecture.ui.login.VMLoginActivity"/>
 
     </data>
